--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <title>React App</title>
+    <title>Зарплата сотрудников</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
